# core

./: .clang-format  .codacy.yml  .editorconfig  .gitignore  .markdownlint.json  .pylintrc  .travis.yml  AUTHORS  CMakeLists.txt  CODEOWNERS  ChangeLog  Makefile.am  README.md  REUSE.toml  _config.yml  about.md  bump-version.sh  codecov.yml  configure.ac  getting-started.md  index.md  installation.md  macos-native.ini  measure_energy.py  meson.build  meson_options.txt  parse_log.py  phases.py  process_log.sh  sample-model.md  update-copyright.sh  usage.md
doc/: conf.py.in  first_steps.rst  index.rst  installing.rst  intro.rst  meson.build  reference.rst
docs/: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile.in  coverage.sh.in  develop.json  flatdoc.css  index.md  inline-params.css  master.json  meson.build
docs/coverage/: master.json
docs/develop/: ROOT-Sim_8h.html  ROOT-Sim_8h.js  ROOT-Sim_8h__dep__incl.map  ROOT-Sim_8h__dep__incl.md5  ROOT-Sim_8h__incl.map  ROOT-Sim_8h_source.html  annotated.html  annotated_dup.js  application_8c.html  application_8c__incl.md5  application_8c_source.html  application_8h.html  application_8h.js  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.md5  application_8h_source.html  arg__parse_8c.html  arg__parse_8c.js  arg__parse_8c_a10040bc5a2ef3dd49007eed20332b1dd_icgraph.map  arg__parse_8c_a3d69dcfa6033bb90f6b8e42e4cfbba01_icgraph.map  arg__parse_8c_a8cab67eafad2a89b02339105eac84254_icgraph.md5  arg__parse_8c_aae3bd36ea44655ef931579fc2513ab32_cgraph.map  arg__parse_8c_aae3bd36ea44655ef931579fc2513ab32_icgraph.md5  arg__parse_8c_ade83a416b21d07001913f0ad514827f7_icgraph.map  arg__parse_8h.js  arg__parse_8h_a8cab67eafad2a89b02339105eac84254_icgraph.map  arg__parse_8h_aae3bd36ea44655ef931579fc2513ab32_cgraph.md5  arg__parse_8h_aae3bd36ea44655ef931579fc2513ab32_icgraph.map  array_8h.html  array_8h.js  array_8h__dep__incl.map  array_8h__dep__incl.md5  array_8h__incl.map  array_8h__incl.md5  array_8h_source.html  auto__ckpt_8c.html  auto__ckpt_8c__incl.map  auto__ckpt_8c__incl.md5  auto__ckpt_8h.html  (+765 more)
docs/master/: ROOT-Sim_8h.html  ROOT-Sim_8h__dep__incl.map  ROOT-Sim_8h__dep__incl.md5  ROOT-Sim_8h__incl.md5  ROOT-Sim_8h_source.html  annotated.html  annotated_dup.js  application_8c.html  application_8c.js  application_8c__incl.map  application_8c_source.html  application_8h.html  application_8h.js  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h_source.html  arg__parse_8c__incl.map  arg__parse_8c__incl.md5  arg__parse_8c_a10040bc5a2ef3dd49007eed20332b1dd_icgraph.md5  arg__parse_8c_a3d69dcfa6033bb90f6b8e42e4cfbba01_icgraph.md5  arg__parse_8c_ade83a416b21d07001913f0ad514827f7_icgraph.md5  arg__parse_8c_source.html  arg__parse_8h.html  arg__parse_8h__dep__incl.map  arg__parse_8h__dep__incl.md5  arg__parse_8h_source.html  array_8h.html  array_8h.js  array_8h__dep__incl.map  array_8h__dep__incl.md5  array_8h__incl.map  array_8h__incl.md5  array_8h_source.html  auto__ckpt_8c.html  auto__ckpt_8h.html  auto__ckpt_8h__dep__incl.map  auto__ckpt_8h__dep__incl.md5  auto__ckpt_8h__incl.md5  bitmap_8h.html  (+747 more)
src/: CMakeLists.txt  Makefile.am  NeuRome.h  ROOT-Sim.h  compiler.c  init.c  main.c  meson.build
src/arch/: arch.c  arch.h  atomic.h  io.c  io.h  mem.c  mem.h  memusage.c  platform.h  thread.c  thread.h  threads.c  threads.h  timer.c  timer.h  ult.c  x86.c
src/communication/: communication.c  communication.h  gvt.c  gvt.h  mpi.c  mpi.h
src/compiler/: compiler.c  rootsim-cc.c  rootsim-cc_llvm.cpp  rootsim-cc_llvm.hpp
src/core/: arg_parse.c  arg_parse.h  compiler.h  control_msg.c  control_msg.h  core.c  core.h  init.c  init.h  intrinsics.h  output.c  output.h  sync.c  sync.h  timer.c  timer.h  visibility.h
src/cuda/: SETTINGS.h  cuda_gpu.h  gpu.cu  gpu.h  kernels.cu  kernels.h  main.cu  main.h  nelder_mead_3d.h  queues.cu  queues.h
src/datatypes/: array.h  bitmap.h  hash_map.c  hash_map.h  heap.h  heap_serial.h  list.h  map.h  msg_queue.c  msg_queue.h  msg_skip_list.c  msg_skip_list.h  msgchannel.c  msgchannel.h  pubsub_map.c  pubsub_map.h  remote_msg_map.c  remote_msg_map.h  retractable_heap.h  vector.c  vector.h
src/distributed/: control_msg.c  control_msg.h  distributed_mem.c  distributed_mem.h  mpi.c  mpi.h  no_mpi.c
src/ftl/: cmp_speed.c  forecast.c  ftl.h  nelder_mead.c  nelder_mead.h  protocol.c
src/gvt/: auto_fossil.c  auto_fossil.h  ccgs.c  fossil.c  fossil.h  gvt.c  gvt.h  termination.c  termination.h
src/include/: ROOT-Sim.h
src/includes/: ROOT-Sim.h
src/instr/: instr_cfg.hpp  instr_llvm.cpp  instr_llvm.hpp  llvm_cfg_gen.py  meson.build  neurome_gen_exposed.py  rootsim_gen_exposed.py
src/lib/: abm_layer.c  lib.c  lib.h  lib_internal.h  meson.build  topology.h
src/log/: file.c  file.h  log.c  log.h  stats.c  stats.h
src/lp/: common.c  common.h  expose_lp_state.c  expose_lp_state.h  lp.c  lp.h  message.h  msg.c  msg.h  process.c  process.h  racer.c  racer.h  retractable.c  retractable.h
src/mm/: auto_ckpt.c  auto_ckpt.h  buddy.c  checkpoints.c  ckpt_interval.c  ckpt_interval.h  distributed_mem.c  distributed_mem.h  dymelor.c  dymelor.h  ecs.c  ecs.h  memtrace.c  mm.c  mm.h  model_allocator.c  model_allocator.h  msg_allocator.c  msg_allocator.h  platform.c  segment.c  slab.c  state.c  state.h  wrapper.c
src/parallel/: parallel.c  parallel.h  timewarp.c  timewarp.h
src/queues/: queues.c
src/rebind/: migration.c  migration.h  rebind.c  rebind.h
src/scheduler/: binding.c  binding.h  control.c  preempt.c  process.c  process.h  scheduler.c  scheduler.h  stf.c  stf.h
src/serial/: serial.c  serial.h
src/statistics/: statistics.c  statistics.h
src/test/: meson.build  test.c  test.h
test/: CMakeLists.txt  compiler_test.c  meson.build  mock.c  mock.h  rng.c  semaphore.c  test-lib.cmake  test.c  test.h  test_main.c  test_rng.h  thread.c
test/compiler/: compiler_test.c
test/core/: init_test.c  load.c  output.c  sync.c  sync_test.c
test/datatypes/: bitmap.c  bitmap_test.c  msg_queue.c  msg_queue_test.c  (+2 more)
(+901 files in other folders)
