# SPDX-FileCopyrightText: 2008-2021 HPDCS Group <rootsim@googlegroups.com>
# SPDX-License-Identifier: CC0-1.0
option('iss', type : 'feature', value : 'disabled', description : '')
option('mpi', type : 'feature', value : 'auto', description : '')
option('retractable_msg', type : 'feature', value : 'enabled', description : 
  'allows LPs to each have a single, self-scheduled retractable message')
option('neural_interface', type : 'feature', value : 'enabled', description : 
  'Activates neural interface')
